--- a/index.html
+++ b/index.html
@@ -1,49 +1,27 @@
-<!-- <!DOCTYPE html>
-<html ng-app="myApp">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>AngularJS Routing Example</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-route.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Css file -->
+    <link rel="stylesheet" href="./counter.css">
+    <title>Counter</title>
 </head>
 <body>
-
-    <h1>AngularJS Routing Example</h1>
-
-    <ul>
-        <li><a href="#/login">Login</a></li>
-        <li><a href="#/register">Register</a></li>
-    </ul>
-
-    <div ng-view></div>
-
-    <script>
-        var app = angular.module("myApp", ["ngRoute"]);
-
-        app.config(function($routeProvider) {
-            $routeProvider
-                .when("/login", {
-                    templateUrl: "login.html",
-                    controller: "LoginController"
-                })
-                .when("/register", {
-                    templateUrl: "register.html",
-                    controller: "RegisterController"
-                })
-                .otherwise({
-                    redirectTo: "/register"
-                });
-        });
-
-        app.controller("LoginController", function($scope) {
-            $scope.message = "Login Page";
-        });
-
-        app.controller("RegisterController", function($scope) {
-            $scope.message = "Register Page";
-        });
-
-    </script>
-
+    <main>
+        <h1>COUNT</h1>
+        <section class="counter">
+            <!-- where the counter will be displayed-->
+            <p id="counter-board">0</p>
+        </section>
+        <!-- Button section -->
+        <section class="buttons-section">
+            <button id="increase-btn">Increase</button>
+            <button id="reset-btn">Reset</button>
+            <button id="decrease-btn">Decrease</button>
+        </section>
+    </main>
+    <!-- Javascript file -->
+    <script src="./counter.js"></script>
 </body>
-
-</html> -->
+</html>
